Fix issue with overlapp ships. Fix issue with hit/miss not registering

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ table {
   display: block;
   -float:right;
   -margin: auto;
-  -margin-right: 50%
+  -margin-right: 50%;
   -margin-top: 10%;
   background-image: url(play1set.png);
   background-size:contain;
